src/sys.rs

pub type retro_vfs_get_path_t = ::std::option::Option<
    unsafe extern "C" fn(stream: *mut retro_vfs_file_handle) -> *const ::std::os::raw::c_char,
>;
pub type retro_vfs_open_t = ::std::option::Option<
    unsafe extern "C" fn(
        path: *const ::std::os::raw::c_char,
        mode: ::std::os::raw::c_uint,
        hints: ::std::os::raw::c_uint,
    ) -> *mut retro_vfs_file_handle,
>;
pub type retro_vfs_close_t = ::std::option::Option<
    unsafe extern "C" fn(stream: *mut retro_vfs_file_handle) -> ::std::os::raw::c_int,
>;
pub type retro_vfs_size_t =
    ::std::option::Option<unsafe extern "C" fn(stream: *mut retro_vfs_file_handle) -> i64>;
pub type retro_vfs_truncate_t = ::std::option::Option<
    unsafe extern "C" fn(stream: *mut retro_vfs_file_handle, length: i64) -> i64,
>;
pub type retro_vfs_tell_t =
    ::std::option::Option<unsafe extern "C" fn(stream: *mut retro_vfs_file_handle) -> i64>;
pub type retro_vfs_seek_t = ::std::option::Option<
    unsafe extern "C" fn(
        stream: *mut retro_vfs_file_handle,
        offset: i64,
        seek_position: ::std::os::raw::c_int,
    ) -> i64,
>;
pub type retro_vfs_read_t = ::std::option::Option<
    unsafe extern "C" fn(
        stream: *mut retro_vfs_file_handle,
        s: *mut ::std::os::raw::c_void,
        len: u64,
    ) -> i64,
>;
pub type retro_vfs_write_t = ::std::option::Option<
    unsafe extern "C" fn(
        stream: *mut retro_vfs_file_handle,
        s: *const ::std::os::raw::c_void,
        len: u64,
    ) -> i64,
>;
pub type retro_vfs_flush_t = ::std::option::Option<
    unsafe extern "C" fn(stream: *mut retro_vfs_file_handle) -> ::std::os::raw::c_int,
>;
pub type retro_vfs_remove_t = ::std::option::Option<
    unsafe extern "C" fn(path: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int,
>;
pub type retro_vfs_rename_t = ::std::option::Option<
    unsafe extern "C" fn(
        old_path: *const ::std::os::raw::c_char,
        new_path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
pub type retro_vfs_stat_t = ::std::option::Option<
    unsafe extern "C" fn(
        path: *const ::std::os::raw::c_char,
        size: *mut i32,
    ) -> ::std::os::raw::c_int,
>;
pub type retro_vfs_mkdir_t = ::std::option::Option<
    unsafe extern "C" fn(dir: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int,
>;
pub type retro_vfs_opendir_t = ::std::option::Option<
    unsafe extern "C" fn(
        dir: *const ::std::os::raw::c_char,
        include_hidden: bool,
    ) -> *mut retro_vfs_dir_handle,
>;
pub type retro_vfs_readdir_t =
    ::std::option::Option<unsafe extern "C" fn(dirstream: *mut retro_vfs_dir_handle) -> bool>;
pub type retro_vfs_dirent_get_name_t = ::std::option::Option<
    unsafe extern "C" fn(dirstream: *mut retro_vfs_dir_handle) -> *const ::std::os::raw::c_char,
>;
pub type retro_vfs_dirent_is_dir_t =
    ::std::option::Option<unsafe extern "C" fn(dirstream: *mut retro_vfs_dir_handle) -> bool>;
pub type retro_vfs_closedir_t = ::std::option::Option<
    unsafe extern "C" fn(dirstream: *mut retro_vfs_dir_handle) -> ::std::os::raw::c_int,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_vfs_interface {
    pub get_path: retro_vfs_get_path_t,
    pub open: retro_vfs_open_t,
    pub close: retro_vfs_close_t,
    pub size: retro_vfs_size_t,
    pub tell: retro_vfs_tell_t,
    pub seek: retro_vfs_seek_t,
    pub read: retro_vfs_read_t,
    pub write: retro_vfs_write_t,
    pub flush: retro_vfs_flush_t,
    pub remove: retro_vfs_remove_t,
    pub rename: retro_vfs_rename_t,
    pub truncate: retro_vfs_truncate_t,
    pub stat: retro_vfs_stat_t,
    pub mkdir: retro_vfs_mkdir_t,
    pub opendir: retro_vfs_opendir_t,
    pub readdir: retro_vfs_readdir_t,
    pub dirent_get_name: retro_vfs_dirent_get_name_t,
    pub dirent_is_dir: retro_vfs_dirent_is_dir_t,
    pub closedir: retro_vfs_closedir_t,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_vfs_interface_info {
    pub required_interface_version: u32,
    pub iface: *mut retro_vfs_interface,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum retro_hw_render_interface_type {
    RETRO_HW_RENDER_INTERFACE_VULKAN = 0,
    RETRO_HW_RENDER_INTERFACE_D3D9 = 1,
    RETRO_HW_RENDER_INTERFACE_D3D10 = 2,
    RETRO_HW_RENDER_INTERFACE_D3D11 = 3,
    RETRO_HW_RENDER_INTERFACE_D3D12 = 4,
    RETRO_HW_RENDER_INTERFACE_GSKIT_PS2 = 5,
    RETRO_HW_RENDER_INTERFACE_DUMMY = 2147483647,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_hw_render_interface {
    pub interface_type: retro_hw_render_interface_type,
    pub interface_version: ::std::os::raw::c_uint,
}
pub type retro_set_led_state_t = ::std::option::Option<
    unsafe extern "C" fn(led: ::std::os::raw::c_int, state: ::std::os::raw::c_int),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_led_interface {
    pub set_led_state: retro_set_led_state_t,
}
pub type retro_midi_input_enabled_t = ::std::option::Option<unsafe extern "C" fn() -> bool>;
pub type retro_midi_output_enabled_t = ::std::option::Option<unsafe extern "C" fn() -> bool>;
pub type retro_midi_read_t = ::std::option::Option<unsafe extern "C" fn(byte: *mut u8) -> bool>;
pub type retro_midi_write_t =
    ::std::option::Option<unsafe extern "C" fn(byte: u8, delta_time: u32) -> bool>;
pub type retro_midi_flush_t = ::std::option::Option<unsafe extern "C" fn() -> bool>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_midi_interface {
    pub input_enabled: retro_midi_input_enabled_t,
    pub output_enabled: retro_midi_output_enabled_t,
    pub read: retro_midi_read_t,
    pub write: retro_midi_write_t,
    pub flush: retro_midi_flush_t,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum retro_hw_render_context_negotiation_interface_type {
    RETRO_HW_RENDER_CONTEXT_NEGOTIATION_INTERFACE_VULKAN = 0,
    RETRO_HW_RENDER_CONTEXT_NEGOTIATION_INTERFACE_DUMMY = 2147483647,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_hw_render_context_negotiation_interface {
    pub interface_type: retro_hw_render_context_negotiation_interface_type,
    pub interface_version: ::std::os::raw::c_uint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_memory_descriptor {
    pub flags: u64,
    pub ptr: *mut ::std::os::raw::c_void,
    pub offset: size_t,
    pub start: size_t,
    pub select: size_t,
    pub disconnect: size_t,
    pub len: size_t,
    pub addrspace: *const ::std::os::raw::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_memory_map {
    pub descriptors: *const retro_memory_descriptor,
    pub num_descriptors: ::std::os::raw::c_uint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_controller_description {
    pub desc: *const ::std::os::raw::c_char,
    pub id: ::std::os::raw::c_uint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_controller_info {
    pub types: *const retro_controller_description,
    pub num_types: ::std::os::raw::c_uint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_subsystem_memory_info {
    pub extension: *const ::std::os::raw::c_char,
    pub type_: ::std::os::raw::c_uint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_subsystem_rom_info {
    pub desc: *const ::std::os::raw::c_char,
    pub valid_extensions: *const ::std::os::raw::c_char,
    pub need_fullpath: bool,
    pub block_extract: bool,
    pub required: bool,
    pub memory: *const retro_subsystem_memory_info,
    pub num_memory: ::std::os::raw::c_uint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_subsystem_info {
    pub desc: *const ::std::os::raw::c_char,
    pub ident: *const ::std::os::raw::c_char,
    pub roms: *const retro_subsystem_rom_info,
    pub num_roms: ::std::os::raw::c_uint,
    pub id: ::std::os::raw::c_uint,
}
pub type retro_proc_address_t = ::std::option::Option<unsafe extern "C" fn()>;
pub type retro_get_proc_address_t = ::std::option::Option<
    unsafe extern "C" fn(sym: *const ::std::os::raw::c_char) -> retro_proc_address_t,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_get_proc_address_interface {
    pub get_proc_address: retro_get_proc_address_t,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum retro_log_level {
    RETRO_LOG_DEBUG = 0,
    RETRO_LOG_INFO = 1,
    RETRO_LOG_WARN = 2,
    RETRO_LOG_ERROR = 3,
    RETRO_LOG_DUMMY = 2147483647,
}
pub type retro_log_printf_t = ::std::option::Option<
    unsafe extern "C" fn(level: retro_log_level, fmt: *const ::std::os::raw::c_char, ...),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_log_callback {
    pub log: retro_log_printf_t,
}
pub type retro_perf_tick_t = u64;
pub type retro_time_t = i64;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_perf_counter {
    pub ident: *const ::std::os::raw::c_char,
    pub start: retro_perf_tick_t,
    pub total: retro_perf_tick_t,
    pub call_cnt: retro_perf_tick_t,
    pub registered: bool,
}
pub type retro_perf_get_time_usec_t = ::std::option::Option<unsafe extern "C" fn() -> retro_time_t>;
pub type retro_perf_get_counter_t =
    ::std::option::Option<unsafe extern "C" fn() -> retro_perf_tick_t>;
pub type retro_get_cpu_features_t = ::std::option::Option<unsafe extern "C" fn() -> u64>;
pub type retro_perf_log_t = ::std::option::Option<unsafe extern "C" fn()>;
pub type retro_perf_register_t =
    ::std::option::Option<unsafe extern "C" fn(counter: *mut retro_perf_counter)>;
pub type retro_perf_start_t =
    ::std::option::Option<unsafe extern "C" fn(counter: *mut retro_perf_counter)>;
pub type retro_perf_stop_t =
    ::std::option::Option<unsafe extern "C" fn(counter: *mut retro_perf_counter)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_perf_callback {
    pub get_time_usec: retro_perf_get_time_usec_t,
    pub get_cpu_features: retro_get_cpu_features_t,
    pub get_perf_counter: retro_perf_get_counter_t,
    pub perf_register: retro_perf_register_t,
    pub perf_start: retro_perf_start_t,
    pub perf_stop: retro_perf_stop_t,
    pub perf_log: retro_perf_log_t,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum retro_sensor_action {
    RETRO_SENSOR_ACCELEROMETER_ENABLE = 0,
    RETRO_SENSOR_ACCELEROMETER_DISABLE = 1,
    RETRO_SENSOR_GYROSCOPE_ENABLE = 2,
    RETRO_SENSOR_GYROSCOPE_DISABLE = 3,
    RETRO_SENSOR_ILLUMINANCE_ENABLE = 4,
    RETRO_SENSOR_ILLUMINANCE_DISABLE = 5,
    RETRO_SENSOR_DUMMY = 2147483647,
}
pub type retro_set_sensor_state_t = ::std::option::Option<
    unsafe extern "C" fn(
        port: ::std::os::raw::c_uint,
        action: retro_sensor_action,
        rate: ::std::os::raw::c_uint,
    ) -> bool,
>;
pub type retro_sensor_get_input_t = ::std::option::Option<
    unsafe extern "C" fn(port: ::std::os::raw::c_uint, id: ::std::os::raw::c_uint) -> f32,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_sensor_interface {
    pub set_sensor_state: retro_set_sensor_state_t,
    pub get_sensor_input: retro_sensor_get_input_t,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum retro_camera_buffer {
    RETRO_CAMERA_BUFFER_OPENGL_TEXTURE = 0,
    RETRO_CAMERA_BUFFER_RAW_FRAMEBUFFER = 1,
    RETRO_CAMERA_BUFFER_DUMMY = 2147483647,
}
